--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         </thead>
         <tbody>
             <tr>
-                <td>Proyecto 1</td>
-                <td>Descripción breve del Proyecto 1</td>
-                <td><a href="https://github.com/tu-usuario/proyecto1" target="_blank">Ver repositorio</a></td>
+                <td>DE</td>
+                <td>Descripción breve de los Proyectos  de DE</td>
+                <td><a href="https://github.com/fermoz/MozTEI/DE" target="_blank">Ver repositorio</a></td>
             </tr>
             <tr>
-                <td>Proyecto 2</td>
-                <td>Descripción breve del Proyecto 2</td>
-                <td><a href="https://github.com/tu-usuario/proyecto2" target="_blank">Ver repositorio</a></td>
+                <td>ES</td>
+                <td>Descripción breve de los Proyectos  de ES</td>
+                <td><a href="https://github.com/fermoz/MozTEI/ES" target="_blank">Ver repositorio</a></td>
             </tr>
         </tbody>
     </table>
