--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             <tr>
                 <td>DE</td>
                 <td>Descripción breve de los Proyectos  de DE</td>
-                <td><a href="https://github.com/fermoz/MozTEI/DE" target="_blank">Ver repositorio</a></td>
+                <td><a href="https://github.com/fermoz/DE" target="_blank">Ver repositorio</a></td>
             </tr>
             <tr>
                 <td>ES</td>
                 <td>Descripción breve de los Proyectos  de ES</td>
-                <td><a href="https://github.com/fermoz/MozTEI/ES" target="_blank">Ver repositorio</a></td>
+                <td><a href="https://github.com/fermoz/ES" target="_blank">Ver repositorio</a></td>
             </tr>
         </tbody>
     </table>
